# tfm

./: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
src/tfm/: __main__.py  config.py  database.py  model.py  schema.sql  singleton_instances.py  spread_sheet_client.py  tfm_bot.py
src/tfm/handlers/: __init__.py  cmd_add_user.py  cmd_get_id.py  cmd_get_user.py  cmd_start_handler.py  database_commands.py  setup.py  view_spreadsheet.py  voice_handler.py
