[tool.poetry]
name = "tfm"
version = "0.1.0"
authors = ["Mark Seliverstov <seliverstovmd@gmail.com>"]
description = "Telegram Finance Manager"
readme = "README.md"
packages = [
    { include = "tfm", from = "src" },
]
include = ["*.conf", "py.typed"]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.14.0"
structlog = "^24.4.0"
openai = "^1.54.3"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
poethepoet = "^0.26.1"
pre-commit = "^4.0.1"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-mypy = "^0.10.3"
pytest-ruff = "^0.4.1"

[tool.poetry.scripts]
tfm = "tfm.__main__:main"

[tool.pytest.ini_options]
addopts = """
    --verbose
    --ruff
    --mypy
    """
asyncio_mode = "auto"

[tool.poe.tasks]
_ruff_sort_imports = "ruff check --select I --fix ."
_ruff_format = "ruff format ."
format-code = ["_ruff_sort_imports", "_ruff_format"]

[tool.ruff]
line-length = 99
output-format = "full"
force-exclude = true
extend-exclude = ["**pb2.py", "**pb2.pyi"]

[tool.ruff.lint]
select = ["E", "F", "I", "PERF", "ARG"]
ignore = [
    "E1", # handled by formatter
    "E4", # handled by formatter
    "E5", # handled by formatter
]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 99

[tool.mypy]
strict = true
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
warn_unused_ignores = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
